Fix complex arrow function and some overlap issues

--- a/client/StatusFlow.scss
+++ b/client/StatusFlow.scss
@@ -18,7 +18,7 @@
   }
   .status-node .status-label,
   .status-node .move-to-label {
-    width: 300px;
+    width: 260px;
     font-size: 14px;
     line-height: 14px;
     opacity: 0;
